--- a/force-app/main/default/lwc/eMS_LM_LeaveHistory_AdminView/eMS_LM_LeaveHistory_AdminView.html
+++ b/force-app/main/default/lwc/eMS_LM_LeaveHistory_AdminView/eMS_LM_LeaveHistory_AdminView.html
@@ -11,10 +11,12 @@
 				<!--lightning-button variant="destructive" label="Select All" title="Select All" onclick={handleSelectAll}>
 				</lightning-button>
 				&nbsp;&nbsp;-->
-				<lightning-button variant="success" label="Approve All" title="Approve ALl" onclick={handleApproveAll}>
+				<lightning-button variant="success" label="Approve All" title="Approve ALl" onclick={handleApproveAll}
+					disabled={disableButton}>
 				</lightning-button>
 				&nbsp;&nbsp;
-				<lightning-button variant="destructive" label="Reject All" title="Reject All" onclick={handleRejectAll}>
+				<lightning-button variant="destructive" label="Reject All" title="Reject All" onclick={handleRejectAll}
+					disabled={disableButton}>
 				</lightning-button>
 			</div>
 		</lightning-card>
@@ -39,7 +41,6 @@
 					</lightning-input>
 				</div>
 			</lightning-layout-item>
-
 			<lightning-layout-item padding="around-small" size="2">
 				<div>
 					<c-multi-select-picklist if:true={leaveTypeValues} options={leaveTypeValues}
@@ -57,140 +58,120 @@
 		</lightning-layout>
 		<template if:true={showdata}>
 			<lightning-card>
-				<table>
-					<thead>
-						<tr style="border-top:1px solid #d4d4d4;border-bottom:1px solid #d4d4d4"></tr>
-						<th style="padding:9px">
-							<div>
-								<lightning-input type="checkbox" variant="standard" label="Select All"
-									onclick={handleSelectAll}></lightning-input>
-							</div>
-						</th>
-						<th>
-							<div title="User Name">Employee Name</div>
-						</th>
-						<th>
-							<div title="Leave Type">Leave Type</div>
-						</th>
-						<th>
-							<div title="Leave Start Date">Leave Start Date</div>
-						</th>
-						<th>
-							<div title="Leave End Date">Leave End Date</div>
-						</th>
-						<th>
-							<div title="Leave Duration">Leave Duration</div>
-						</th>
-						<th>
-							<div title="Reason">Reason</div>
-						</th>
-						<th>
-							<div title="Approver">Approver</div>
-						</th>
-						<th>
-							<div title="Leave Status">Leave Status</div>
-						</th>
-						<th>
-							<div title="Approved On">Approved On</div>
-						</th>
-						<th style="width:3.25rem">
-							<div title="Actions">Actions</div>
-						</th>
-						</tr>
-					</thead>
-					<tbody>
-						<template for:each={datahistory} for:item="Req">
-							<tr key={Req.Id} style="border-bottom:1px solid #d4d4d4">
-								<td style="padding:15px">
-									<input type="checkbox" id="checkbox-unique-id-81" name="label" onchange={handleSelect} data-id={Req.Id} data-record-id={Req.id}/>
-                </td>
-								<td>
-									<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
-										{Req.EMS_LM_Contact__r.Name}</div>
-								</td>
-								<td>
-									<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
-										{Req.EMS_LM_Leave_Type_Name__c }</div>
-								</td>
-								<td>
-									<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
-										<lightning-formatted-date-time value={Req.EMS_LM_Leave_Start_Date__c}
-											month="numeric" day="numeric" year="numeric">
-										</lightning-formatted-date-time>
-									</div>
-								</td>
-								<td>
-									<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
-										<lightning-formatted-date-time value={Req.EMS_LM_Leave_End_Date__c}
-											month="numeric" day="numeric" year="numeric">
-										</lightning-formatted-date-time>
-									</div>
-								</td>
-								<td>
-									<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
-										{Req.EMS_LM_Leave_Duration__c}</div>
-								</td>
-								<td>
-									<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
-										{Req.EMS_LM_Reason__c}</div>
-								</td>
-								<td>
-									<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
-										{Req.EMS_LM_Current_Approver__c}</div>
-								</td>
-								<td>
-									<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
-										{Req.EMS_LM_Status__c}</div>
-								</td>
-								<td>
-									<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
-										<lightning-formatted-date-time value={Req.EMS_LM_Approved_On__c} month="numeric"
-											day="numeric" year="numeric">
-										</lightning-formatted-date-time>
-									</div>
-								</td>
-								<td class="slds-cell_action-mode" role="gridcell">
-									<lightning-button-icon variant="bare" size="large" icon-name="action:approval"
-										alternative-text="Approve" onclick={showModalApprovalBox}
-										data-value={Req.EMS_LM_Status__c} key-field={Req.Id} data-record-id={Req.Id}
-										data-id={Req.Id}></lightning-button-icon>
-
-									<lightning-button-icon variant="bare" size="large" icon-name="action:reject"
-										alternative-text="Reject" onclick={showModalRejectBox}
-										data-value={Req.EMS_LM_Status__c} key-field={Req.Id} data-record-id={Req.Id}
-										data-id={Req.Id}></lightning-button-icon>
-
-									<lightning-button-icon variant="bare" size="large"
-										icon-name="utility:cancel_file_request" alternative-text="Cancel"
-										onclick={handleCancel} data-value={Req.EMS_LM_Status__c} key-field={Req.Id}
-										data-record-id={Req.Id} data-id={Req.Id}></lightning-button-icon>
-
-									<!--lightning-button-menu alternative-text="Show menu" icon-name="utility:threedots_vertical"
-                    variant="container" menu-alignment="right" onclick={handleCancelButton}
-                    data-value={Req.EMS_LM_Status__c} data-record-id={Req.Id}>
-                    <template if:true={showcancelbutton}>
-                      <lightning-menu-item value="Approve" label="Approve" 
-                       onclick={showModalApprovalBox} data-value={Req.EMS_LM_Status__c}
-												key-field={Req.Id} data-record-id={Req.Id} data-id={Req.Id}>
-                      </lightning-menu-item>
-
-                      <lightning-menu-item value="Reject" label="Reject"
-                       onclick={showModalRejectBox}
-                        data-value={Req.EMS_LM_Status__c} key-field={Req.Id}
-                        data-record-id={Req.Id} data-id={Req.Id}></lightning-menu-item>
-      
-                      <lightning-menu-item value="Cancel" label="Cancel"
-                       onclick={handleCancel}
-                        data-value={Req.EMS_LM_Status__c} key-field={Req.Id}
-                        data-record-id={Req.Id} data-id={Req.Id}></lightning-menu-item>
-
-                    </template>
-                  </lightning-button-menu-->
-								</td>
+				<div class="table-container">
+					<table>
+						<thead>
+							<tr style="border-top:1px solid #d4d4d4;border-bottom:1px solid #d4d4d4"></tr>
+							<th style="padding:9px">
+								<div>
+									<lightning-input type="checkbox" variant="standard" label="Select All"
+										onclick={handleSelectAll}></lightning-input>
+								</div>
+							</th>
+							<th>
+								<div title="User Name">Employee Name</div>
+							</th>
+							<th>
+								<div title="Leave Type">Leave Type</div>
+							</th>
+							<th>
+								<div title="Leave Start Date">Leave Start Date</div>
+							</th>
+							<th>
+								<div title="Leave End Date">Leave End Date</div>
+							</th>
+							<th>
+								<div title="Leave Duration">Leave Duration</div>
+							</th>
+							<th>
+								<div title="Reason">Reason</div>
+							</th>
+							<th>
+								<div title="Approver">Approver</div>
+							</th>
+							<th>
+								<div title="Leave Status">Leave Status</div>
+							</th>
+							<th>
+								<div title="Approved On">Approved On</div>
+							</th>
+							<th style="width:3.25rem">
+								<div title="Actions">Actions</div>
+							</th>
 							</tr>
-						</template>
-					</tbody>
-				</table>
+						</thead>
+						<tbody>
+							<template for:each={datahistory} for:item="Req">
+								<tr key={Req.Id} style="border-bottom:1px solid #d4d4d4">
+									<td style="padding:15px">
+										<input type="checkbox" id="checkbox-unique-id-81" name="label" onchange={handleSelect} data-id={Req.Id} data-record-id={Req.id}/>
+                </td>
+									<td>
+										<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
+											{Req.EMS_LM_Contact__r.Name}</div>
+									</td>
+									<td>
+										<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
+											{Req.EMS_LM_Leave_Type_Name__c }</div>
+									</td>
+									<td>
+										<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
+											<lightning-formatted-date-time value={Req.EMS_LM_Leave_Start_Date__c}
+												month="numeric" day="numeric" year="numeric">
+											</lightning-formatted-date-time>
+										</div>
+									</td>
+									<td>
+										<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
+											<lightning-formatted-date-time value={Req.EMS_LM_Leave_End_Date__c}
+												month="numeric" day="numeric" year="numeric">
+											</lightning-formatted-date-time>
+										</div>
+									</td>
+									<td>
+										<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
+											{Req.EMS_LM_Leave_Duration__c}</div>
+									</td>
+									<td>
+										<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
+											{Req.EMS_LM_Reason__c}</div>
+									</td>
+									<td>
+										<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
+											{Req.EMS_LM_Current_Approver__c}</div>
+									</td>
+									<td>
+										<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
+											{Req.EMS_LM_Status__c}</div>
+									</td>
+									<td>
+										<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
+											<lightning-formatted-date-time value={Req.EMS_LM_Approved_On__c}
+												month="numeric" day="numeric" year="numeric">
+											</lightning-formatted-date-time>
+										</div>
+									</td>
+									<td class="slds-cell_action-mode" role="gridcell">
+										<lightning-button-icon variant="bare" size="large" icon-name="action:approval"
+											alternative-text="Approve" onclick={showModalApprovalBox}
+											data-value={Req.EMS_LM_Status__c} key-field={Req.Id} data-record-id={Req.Id}
+											data-id={Req.Id}></lightning-button-icon>
+
+										<lightning-button-icon variant="bare" size="large" icon-name="action:reject"
+											alternative-text="Reject" onclick={showModalRejectBox}
+											data-value={Req.EMS_LM_Status__c} key-field={Req.Id} data-record-id={Req.Id}
+											data-id={Req.Id}></lightning-button-icon>
+
+										<lightning-button-icon variant="bare" size="large"
+											icon-name="utility:cancel_file_request" alternative-text="Cancel"
+											onclick={handleCancel} data-value={Req.EMS_LM_Status__c} key-field={Req.Id}
+											data-record-id={Req.Id} data-id={Req.Id}></lightning-button-icon>
+									</td>
+								</tr>
+							</template>
+						</tbody>
+					</table>
+				</div>
 			</lightning-card>
 		</template>
 	</lightning-card>
