--- a/force-app/main/default/lwc/eMS_LM_ApplyLeave/eMS_LM_ApplyLeave.html
+++ b/force-app/main/default/lwc/eMS_LM_ApplyLeave/eMS_LM_ApplyLeave.html
@@ -1,11 +1,11 @@
 <!-- This component is used to apply the Leave For current Logged in Employee  -->
 <template>
-	<div >
+	<div  class="myDivAlligment">
 	<div class="slds-box slds-theme_shade">
 		<div class="slds-modal slds-fade-in-open slds-backdrop">
 			<div class="slds-modal__container">
-				<div class="slds-modal__header">
-				<div >
+				<div>
+				<div class="slds-modal__header" >
 					<lightning-button-icon icon-name="utility:close" alternative-text="Close" size="large"
 						variant="bare-inverse" onclick={closeme} class="slds-modal__close">
 					</lightning-button-icon>
@@ -22,10 +22,12 @@
 										required></lightning-combobox>
 								</div>
 							</lightning-layout-item>
+
+							<template if:true={visiableotherdetail}>
 							
 							<lightning-layout-item padding="around-small" size="3">
 								<div>
-									<lightning-input type="Date" label="Start Date" name="startDate1" value={startDate1}
+									<lightning-input type="Date" label="Start Date" name="startDate1" value={startDate1} timezone={userTimeZone}
 										onchange={datechange}></lightning-input>
 								</div>
 							</lightning-layout-item>
@@ -61,9 +63,11 @@
 									</lightning-textarea>
 								</div>
 							</lightning-layout-item>
-
-
-							<lightning-layout-item padding="around-small" size="12">
+		
+							</template>							
+							
+						</lightning-layout>
+						<div class="slds-align_absolute-center">
 								<template if:true={fileuploadRequired}>
 
 									<div class="slds-var-m-around_medium">
@@ -73,35 +77,16 @@
 									<template if:true={fileData}>
 										<p>{fileData.filename}</p>
 									</template>
-									<!--<div>
-                  <lightning-file-upload label="Upload Proof " name="fileUploader" accept={acceptedFormats}
-                    record-id={rId} onuploadfinished={handleUploadFinished} multiple>
-                  </lightning-file-upload>
-                </div>
-                <template if:true={file}>
-                  <br/>               
-                  <p>{fileName}</p>
-              </template>-->
 
 								</template>
-							</lightning-layout-item>
-
-							<lightning-layout-item padding="around-small" size="6">
-								<div>
-								<lightning-button variant="destructive" label="Cancel" title="Destructive action"
-										onclick={closeme} class="slds-var-m-left_x-small"></lightning-button>	
-								</div>
-
-							</lightning-layout-item>
-							<lightning-layout-item padding="around-small" size="6">
-								<div>
-									<lightning-button variant="brand" label="Submit" title="Primary action"
-										onclick={submitme} disabled={submitcheck} class="slds-var-m-left_x-small">
-									</lightning-button>	
-								</div>
-							</lightning-layout-item>
-						</lightning-layout>
+							</div>
 					</div>
+					 <footer class="slds-modal__footer slds-align_absolute-center">
+						<lightning-button variant="destructive" label="Cancel" title="Destructive action"
+										onclick={closeme} class="slds-var-m-left_x-small"></lightning-button>
+						<lightning-button variant="brand" label="Submit" title="Primary action"
+										onclick={submitme} disabled={submitcheck} class="slds-var-m-left_x-small"></lightning-button>
+					 </footer>
 				</div>
 				</div>
 			</div>
