--- a/force-app/main/default/lwc/eMS_LM_LeaveHistory/eMS_LM_LeaveHistory.html
+++ b/force-app/main/default/lwc/eMS_LM_LeaveHistory/eMS_LM_LeaveHistory.html
@@ -1,20 +1,33 @@
 <template>
-	<center><div class="table-container"><table>
-    <thead>
-      <tr>
-        <th>Start Date</th>
-        <th>End Date</th>
-        <th>Status</th>
-      </tr>
-    </thead>
-    <tbody>
-      <template for:each={PendingLeaveReq} for:item="row">
-        <tr key={row.id} tabindex="0"  onclick={handleRowClick} onkeydown={handleRowKeyDown}>
-          <td><lightning-formatted-date-time value={row.EMS_LM_Leave_Start_Date__c}> </lightning-formatted-date-time></td>
-          <td><lightning-formatted-date-time value={row.EMS_LM_Leave_End_Date__c}> </lightning-formatted-date-time></td>
-          <td>{row.EMS_LM_Status__c}</td>
-        </tr>
-      </template>
-    </tbody>
-  </table></div> </center>
+	<center>
+		<div class="table-container">
+			<table>
+				<thead>
+					<tr>
+						<th>Start Date</th>
+						<th>End Date</th>
+						<th>Status</th>
+					</tr>
+				</thead>
+				<tbody>
+					<template for:each={PendingLeaveReq} for:item="row">
+						<tr key={row.id}>
+							<td>
+								<lightning-formatted-date-time value={row.EMS_LM_Leave_Start_Date__c}>
+								</lightning-formatted-date-time>
+							</td>
+							<td>
+								<lightning-formatted-date-time value={row.EMS_LM_Leave_End_Date__c}>
+								</lightning-formatted-date-time>
+							</td>
+							<td>{row.EMS_LM_Status__c}</td>
+						</tr>
+					</template>
+				</tbody>
+			</table>
+			<template if:true={nodata}>
+				<h2> No Leave Requests </h2>
+			</template>
+		</div>
+	</center>
 </template>
