--- a/force-app/main/default/lwc/eMS_LM_Leaveoption/eMS_LM_Leaveoption.html
+++ b/force-app/main/default/lwc/eMS_LM_Leaveoption/eMS_LM_Leaveoption.html
@@ -7,7 +7,7 @@
 					<lightning-button-icon icon-name="utility:close" alternative-text="Close" size="large"
 						variant="bare-inverse" onclick={closemefirst} class="slds-modal__close">
 					</lightning-button-icon>
-					<font size="6"> <b> Apply Leave </b> </font> <br/><br/>
+					<!--font size="6"> <b> Apply Leave </b> </font> <br/><br/-->
 				<center>	
 					<h2 id="modal-heading-02" class="slds-modal__title slds-hyphenate">What do you want to apply for?</h2> <br/>
 					<div class="radio-group-container">
