--- a/force-app/main/default/lwc/eMS_LM_WFH/eMS_LM_WFH.html
+++ b/force-app/main/default/lwc/eMS_LM_WFH/eMS_LM_WFH.html
@@ -1,13 +1,16 @@
 <!--  this conponent used to Apply WFH for current logged in Employee   -->
 <template>
+  <div  class="myDivAlligment">
   <div class="slds-box slds-theme_shade">
     <div class="slds-modal slds-fade-in-open slds-backdrop">
       <div class="slds-modal__container">
-        <div class="slds-modal__header">
+        <div >
+          <div class="slds-modal__header">
           <lightning-button-icon icon-name="utility:close" alternative-text="Close" size="large"
             variant="bare-inverse" onclick={closeme} class="slds-modal__close">
           </lightning-button-icon>
           <h1 id="modal-heading-02" class="slds-modal__title slds-hyphenate">Apply Work From Home</h1>
+          </div>
           <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
             <lightning-layout multiple-rows>
               <lightning-layout-item padding="around-small" size="6">
@@ -25,7 +28,7 @@
               <!-- template if:true={check2} -->
                 <lightning-layout-item padding="around-small" size="12">
                   <div>
-                    <lightning-input type="number" label="Work from home Duration" value={duration} disabled></lightning-input>
+                    <lightning-input type="number" label="Duration" value={duration} disabled></lightning-input>
                   </div>
                 </lightning-layout-item>
               <!-- /template -->                    
@@ -34,8 +37,10 @@
                   <lightning-textarea type="text" maxlength="250" label="Reason" onchange={reasonchange} value={reason}></lightning-textarea>
                 </div>
               </lightning-layout-item>
-              <lightning-layout-item padding="around-small" size="12">
-                <div class="slds-var-m-around_medium">
+              
+            </lightning-layout>
+            <div class="slds-align_absolute-center">
+                  <div class="slds-var-m-around_medium">
                   <lightning-input type="file"
                   accept=".png, .doc, .docx, .pdf , .jpg, .jpeg"
                   label="Upload support document" onchange={openfileUpload}></lightning-input>
@@ -43,24 +48,18 @@
                 <template if:true={fileData}>
                   <p>{fileData.filename}</p>
               </template>
-              </lightning-layout-item>
-              <lightning-layout-item padding="around-small" size="6">
-                <div>
-                  <lightning-button variant="destructive" label="Cancel" title="Destructive action"
-                  onclick={closeme} class="slds-m-left_x-small"></lightning-button>
-                </div>
-              </lightning-layout-item>
-              <lightning-layout-item padding="around-small" size="6">
-                <div>
-                 
-                    <lightning-button variant="brand" label="Submit" title="Primary action" onclick={submit} disabled={disabledSubmitted}
-                    class="slds-m-left_x-small"></lightning-button>
-                </div>
-              </lightning-layout-item>
-            </lightning-layout>
+            </div>
           </div>
+          <footer class="slds-modal__footer slds-align_absolute-center">
+            <lightning-button variant="destructive" label="Cancel" title="Destructive action"
+                  onclick={closeme} class="slds-m-left_x-small"></lightning-button>
+            <lightning-button variant="brand" label="Submit" title="Primary action" onclick={submit} disabled={disabledSubmitted}
+                    class="slds-m-left_x-small"></lightning-button>
+          </footer>
         </div>
+
       </div>
     </div>
+  </div>
   </div>
 </template>
