--- a/force-app/main/default/lwc/eMS_LM_LeaveHistory_PendingOnMe/eMS_LM_LeaveHistory_PendingOnMe.html
+++ b/force-app/main/default/lwc/eMS_LM_LeaveHistory_PendingOnMe/eMS_LM_LeaveHistory_PendingOnMe.html
@@ -9,10 +9,13 @@
 <template>
 	<div class="font">
 		<lightning-card>
+			<div class="spinner">
+				<template if:true={isLoading}>
+					<lightning-spinner alternative-text="Loading" variant="brand" size="medium">
+					</lightning-spinner>
+				</template>
+			</div>
 			<div slot="actions">
-				<!--lightning-button variant="destructive" label="Select All" title="Select All" onclick={handleSelectAll}>
-				</lightning-button>
-				&nbsp;&nbsp;-->
 				<lightning-button variant="success" label="Approve All" title="Approve ALl" onclick={handleApproveAll}
 					disabled={disableButton}>
 				</lightning-button>
@@ -95,7 +98,7 @@
 										<div title="Approved On">Approved On</div>
 									</th>
 									<th class="slds-cell_action-mode" style="width:2.25rem">
-										<div class="slds-truncate slds-assistive-text" title="Actions">Actions</div>
+										<div>Actions</div>
 									</th>
 								</tr>
 							</thead>
@@ -103,54 +106,53 @@
 								<template for:each={datahistory} for:item="Req">
 									<tr key={Req.Id} style="border-bottom:0.5px solid #d4d4d4">
 										<td style="padding:7px">
-											<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
+											<div class="slds-truncate dv-dynamic-width">
 												<input type="checkbox" id="checkbox-unique-id-81" name="label" onchange={handleSelect} data-id={Req.Id} data-record-id={Req.id} disabled ={Req.disableButton}/>
 									</div>
 										</td>
 										<td>
-											<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
+											<div class="slds-truncate dv-dynamic-width">
 												{Req.EMS_LM_Contact__r.Name}</div>
 										</td>
 										<td>
-											<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
+											<div class="slds-truncate dv-dynamic-width">
 												{Req.EMS_LM_Leave_Type_Name__c }</div>
 										</td>
 										<td>
-											<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
+											<div class="slds-truncate dv-dynamic-width">
 												<lightning-formatted-date-time value={Req.EMS_LM_Leave_Start_Date__c}
 													month="numeric" day="numeric" year="numeric">
 												</lightning-formatted-date-time>
 											</div>
 										</td>
 										<td>
-											<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
+											<div class="slds-truncate dv-dynamic-width">
 												<lightning-formatted-date-time value={Req.EMS_LM_Leave_End_Date__c}
 													month="numeric" day="numeric" year="numeric">
 												</lightning-formatted-date-time>
 											</div>
 										</td>
 										<td>
-											<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
+											<div class="slds-truncate dv-dynamic-width">
 												{Req.EMS_LM_Leave_Duration__c}</div>
 										</td>
 										<td>
-											<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
+											<div class="slds-truncate dv-dynamic-width">
 												{Req.EMS_LM_Reason__c}</div>
 										</td>
 										<td>
-											<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
+											<div class="slds-truncate dv-dynamic-width">
 												{Req.EMS_LM_Current_Approver__c}</div>
 										</td>
 										<td>
-											<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
+											<div class="slds-truncate dv-dynamic-width">
 												{Req.EMS_LM_Status__c}</div>
 										</td>
 										<td>
-											<div class="slds-truncate dv-dynamic-width" style={fixedWidth}>
+											<div class="slds-truncate dv-dynamic-width">
 												{Req.EMS_LM_Approved_On__c}</div>
 										</td>
 										<td class="slds-truncate dv-dynamic-width">
-
 											<lightning-button-icon variant="bare" size="large"
 												icon-name="action:preview" alternative-text="View" onclick={handleView}
 												data-value={Req.EMS_LM_Status__c} key-field={Req.Id}
