--- a/force-app/main/default/lwc/eMS_LM_ApplyLeave/eMS_LM_ApplyLeave.html
+++ b/force-app/main/default/lwc/eMS_LM_ApplyLeave/eMS_LM_ApplyLeave.html
@@ -72,7 +72,7 @@
 
 									<div class="slds-var-m-around_medium">
 										<lightning-input type="file" accept=".png, .doc, .docx, .pdf , .jpg, .jpeg"
-											label="Upload support document" onchange={openfileUpload}></lightning-input>
+											label="Upload supporting document" onchange={openfileUpload}></lightning-input>
 									</div>
 									<template if:true={fileData}>
 										<p>{fileData.filename}</p>
